--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>CSS styling toevoegen</title>
 </head>
 <body>
-<h1 class="intro">Frambozen</h1>
-<h2 id="space">Gezonde fruitsoort</h2>
+<h1>Frambozen</h1>
+<h2>Gezonde fruitsoort</h2>
 <p id="introduction">Tegenwoordig kun je frambozen het hele jaar door kopen. Op zijn lekkerst zijn ze natuurlijk in de zomer. Lekker door de yoghurt bij het ontbijt, maar ook zo uit het handje als tussendoortje.</p>
 <p>Frambozen bevatten unieke antioxidanten, zogeheten ellagitannines. Ellagitannines vind je in kleine hoeveelheden in aardbeien en in sommige geneeskrachtige kruiden. Ze voorkomen dat cellen beschadigen. Maar er zitten nog meer goede dingen in frambozen:</p>
 <ul class="vita">
