--- a/index1.html
+++ b/index1.html
@@ -10,24 +10,24 @@
   <h1>Als we alles zouden toepassen wordt het een zooitje</h1>
 </header>
 <main>
-  <article class="article1">
+  <article>
     <h2>Maak de schaduw op elementen nooit te heftig</h2>
     <div class="circle-one"></div>
     <div class="circle-two"></div>
   </article>
-  <article class="article2">
+  <article>
     <h2>Gebruik niet zoveel verschillende borders als hier</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   </article>
-  <article class="article3">
+  <article>
     <h2>Lorum ipsum dolor</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   </article>
-  <article class="article4">
+  <article>
     <h2>Lorum ipsum dolor</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   </article>
-  <article class="article5">
+  <article>
     <h2>Lorum ipsum dolor</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
   </article>
